# sr

./: .gitignore  CMakeLists.txt  Canvas.cpp  Canvas.h  FrameBuffer.h  Global.cpp  Global.h  IApplication.h  PipeLine.cpp  PipeLine.h  Profiler.cpp  Profiler.h  README.md  WindowInput.cpp  WindowInput.h  build.sh  loop.h  loopWin32.cpp  main.cpp  vs.cpp
apps/: Poor.cpp  Poor.cpp.bak  Poor.h
dep/googletest/cmake/: internal_utils.cmake
dep/googletest/include/gtest/: gtest.h
dep/googletest/include/gtest/internal/: gtest-port.h
dep/googletest/include/gtest/internal/custom/: gtest-port.h
math/: AxisAngle.h  ChebyshevRatio.h  Common.h  EulerAngles.h  Matrix.h  Quaternion.h  Rotation.h  Vectors.h
math/tests/: CMakeLists.txt  MatrixTest.cpp  QuaternionTest.cpp  VectorsTest.cpp
primitives/: Plane.h  Sphere.h
resource/: Algo.h  AlgoManager.cpp  AlgoManager.h  BitmapLoader.h  ClonedVertex.h  Enum.h  Id.h  IndexAttr.h  Locator.h  Mesh.cpp  Mesh.h  MeshAssign.h  MeshBuilder.cpp  MeshBuilder.h  RasTrapezoid.h  ResAlloc.h  ResMemory.h  ResNode.h  ResRegistry.cpp  ResRegistry.h  ResourceMemory.h  ResourceState.cpp  ResourceState.h  VertexAttr.h  VertexIterator.h  VerticesAssembly.cpp  VerticesAssembly.h
resource/tests/: CMakeLists.txt  MeshBuilderTest.cpp  ResAllocTest.cpp
scene/: BoundingSphere.h  CameraRig.cpp  CameraRig.h  Culler.h  Transform.cpp  Transform.h  VertexTransform.h  ViewFrustum.cpp  ViewFrustum.h
scene/tests/: CMakeLists.txt  MVPTest.cpp  ViewFrustumTest.cpp
util/: Singleton.h
